Update in UI Application and architecture diagram

--- a/chatbot-app/public/index.html
+++ b/chatbot-app/public/index.html
@@ -17,7 +17,7 @@
             /* Enables flexbox on the body */
             justify-content: flex-start;
             /* Centers content horizontally */
-            align-items: center;
+            align-items: flex-start;
             /* Centers content vertically */
             background-color: #1492c1;
             /* Sets the background color */
